Modifications for WPS version 4